# website-categorizer

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  websites_dataset.csv
app/: app.py
categorizer/: __init__.py  dataset.py  model.py  preprocess.py  scraper.py  website_categorizer_model.joblib  website_vectorizer.joblib
categorizer/models/: logistic_regression_model.joblib  svm_model.joblib  website_vectorizer.joblib  xgboost_model.joblib
